Fixing pagination styles on ios (Pagination)

--- a/src/app/views/shared/pagination/pagination.component.scss
+++ b/src/app/views/shared/pagination/pagination.component.scss
@@ -12,8 +12,12 @@ ion-card {
     }
 }
 
-ion-button {
+.md ion-button {
     font-size: 5px;
+}
+
+.ios ion-button {
+    font-size: 12px;
 }
 
 .paginator {
